<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="horizontal"
    android:padding="10dip">

    <RelativeLayout
        android:id="@+id/school_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip" >

        <ImageView
            android:id="@+id/school_thumb_image"
            android:layout_width="90dip"
            android:layout_height="90dip"
            android:contentDescription="@string/nd_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/thumbnail" />
    </RelativeLayout>

    <TextView
        android:id="@+id/school_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/school_title"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/school_indirizzo"
        android:layout_alignTop="@+id/school_thumbnail"
        android:text="@string/school_title"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/school_indirizzo"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/school_title"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/school_thumbnail"
        android:text="@string/school_indirizzo"
        android:textColor="@color/Gray" />

    <TextView
        android:id="@+id/school_desc"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/school_indirizzo"
        android:layout_marginTop="5dip"
        android:layout_toRightOf="@+id/school_thumbnail"
        android:text="@string/school_desc"
        android:textColor="#343434" />

</RelativeLayout>